# TravelingSalesman

./: .gitignore  CMakeLists.txt  README.md  main.c  utils.c  utils.h
Algorithms/: algorithms.h  heuristics.c  hybridBrachAndBound.c  parallelBrachAndBound.c  simpleBranchAndBound.c
DataStructure/: DataStructure.h  LinkedQueue.c  LinkedQueue.h  LinkedStack.c  LinkedStack.h  ParallelStack.c  ParallelStack.h  parallelStack.h
IO/: IO.c  IO.h
MPI/: mpiWrapper.c  mpiWrapper.h
Plotting/: pathPlot.py  solution.py
results/: tsp_N1_C10_25.txt  tsp_N1_C16_28.txt  tsp_N1_C1_25.txt  tsp_N1_C1_27.txt  tsp_N1_C2_25.txt  tsp_N1_C2_27.txt  tsp_N1_C2_28.txt  tsp_N1_C4_25.txt  tsp_N1_C4_27.txt  tsp_N1_C4_28.txt  tsp_N1_C8_25.txt  tsp_N1_C8_27.txt  tsp_N1_C8_28.txt  tsp_N2_C8_25.txt  tsp_N2_C8_27.txt  tsp_N2_C8_28.txt  tsp_N3_C8_25.txt  tsp_N3_C8_27.txt  tsp_N3_C8_28.txt  tsp_N4_C8_25.txt  tsp_N4_C8_27.txt  tsp_N4_C8_28.txt  tsp_N5_C8_25.txt  tsp_N5_C8_28.txt  tsp_N6_C8_28.txt
salesman_data/: generate_test_data.py
tsp_data/: generate_test_data.py  tsp_10.out  tsp_20.out  tsp_25.out  tsp_26.out  tsp_27.out  tsp_28.out  tsp_29.out  tsp_30.out  tsp_31.out  tsp_32.out  tsp_33.out  tsp_34.out  tsp_35.out
